--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tresjs/cientos": "^4.3.1",
     "@tresjs/core": "^4.3.5",
     "@tresjs/leches": "latest",
+    "pinia": "^2.1.7",
     "three": "^0.159.0",
     "vue": "^3.3.9",
     "vuetify": "^3.5.13"
